# pcli

./: Cargo.toml  README.md
crates/pcli-cli/: Cargo.toml
crates/pcli-cli/src/: daemon_helper.rs  main.rs  output.rs  repl.rs
crates/pcli-cli/src/commands/: mod.rs  open.rs  projects.rs  remind.rs  status.rs  system.rs  tasks.rs
crates/pcli-core/: Cargo.toml
crates/pcli-core/src/: config.rs  error.rs  lib.rs
crates/pcli-core/src/models/: mod.rs  project.rs  reminder.rs  task.rs  time_log.rs
crates/pcli-core/src/storage/: mod.rs  schema.sql  sqlite.rs
crates/pcli-daemon/: Cargo.toml
crates/pcli-daemon/src/: main.rs  notifier.rs  scheduler.rs
crates/pcli-tui/: Cargo.toml
crates/pcli-tui/src/: app.rs  board.rs  lib.rs
docs/: DESIGN.md
skill/: skill.md
