[workspace]
resolver = "2"
members = [
    "crates/pcli-core",
    "crates/pcli-cli",
    "crates/pcli-tui",
    "crates/pcli-daemon",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mahesh Khatri"]
license = "MIT"
repository = "https://github.com/maheshkhatri/pcli"

[workspace.dependencies]
# Async
tokio = { version = "1.35", features = ["full"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Terminal UI
ratatui = "0.25"
crossterm = "0.27"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Notifications
notify-rust = "4.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
dirs = "5.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
colored = "2.1"
tabled = "0.15"
indicatif = "0.17"
dialoguer = "0.11"

# Internal crates
pcli-core = { path = "crates/pcli-core" }
pcli-tui = { path = "crates/pcli-tui" }
