[package]
name = "pcli-core"
description = "Core library for pcli - Project CLI"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dirs.workspace = true
uuid.workspace = true
tracing.workspace = true
